--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
     "iview": "^3.5.4",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "vue-timeago": "^5.1.3"
   },
   "devDependencies": {}
 }
