--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.11.0",
     "iview": "^3.5.4",
     "nuxt": "^2.13.0",
+    "nuxt-socket-io": "^1.1.18",
     "vue-timeago": "^5.1.3"
   },
   "devDependencies": {}
