--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
+    "fs": "0.0.1-security",
     "iview": "^3.5.4",
+    "net": "^1.0.2",
     "nuxt": "^2.13.0",
     "nuxt-socket-io": "^1.1.18",
+    "tls": "0.0.1",
     "vue-timeago": "^5.1.3"
   },
   "devDependencies": {}
